add empty code cell to assignment notebook and update Python version to 3.12.5

--- a/Assignment1/CohortCRhythmShahAssignment1.ipynb
+++ b/Assignment1/CohortCRhythmShahAssignment1.ipynb
@@ -525,6 +525,13 @@
     "score = fcn.accuracy(Ypred, Y)\n",
     "print(round(score,2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -543,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.undefined.undefined"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
