add notebookRunGroups metadata to code cell in assignment notebook

--- a/Assignment1/CohortCRhythmShahAssignment1.ipynb
+++ b/Assignment1/CohortCRhythmShahAssignment1.ipynb
@@ -529,7 +529,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "2"
+    }
+   },
    "outputs": [],
    "source": []
   }
